WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
145719
[iOS] Don't force compositing layers for no-op 3D transforms on low-memory devices.
https://bugs.webkit.org/show_bug.cgi?id=145719
Summary
[iOS] Don't force compositing layers for no-op 3D transforms on low-memory de...
Andreas Kling
Reported
2015-06-05 16:58:24 PDT
<
rdar://problem/19973042
>
Attachments
Patch
(2.64 KB, patch)
2015-06-05 16:59 PDT
,
Andreas Kling
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2015-06-05 16:59:45 PDT
Created
attachment 254398
[details]
Patch
WebKit Commit Bot
Comment 2
2015-06-05 17:01:46 PDT
Attachment 254398
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/RenderLayerCompositor.cpp:66: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2015-06-05 17:15:54 PDT
Comment on
attachment 254398
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=254398&action=review
r=me
> Source/WebCore/rendering/RenderLayerCompositor.cpp:2476 > + static uint64_t memSize = ramSize() / 1024 / 1024;
Please call this ramSizeInMB.
> Source/WebCore/rendering/RenderLayerCompositor.cpp:2478 > + // Special policy for low-memory devices: Don't require compositing just because there's a no-op 3D transform.
I really really really wish we did this all the time.
Andreas Kling
Comment 4
2015-06-05 19:22:20 PDT
(In reply to
comment #3
)
> > Source/WebCore/rendering/RenderLayerCompositor.cpp:2478 > > + // Special policy for low-memory devices: Don't require compositing just because there's a no-op 3D transform. > > I really really really wish we did this all the time.
Me too, really x3.
Andreas Kling
Comment 5
2015-06-05 20:12:11 PDT
Committed
r185284
: <
http://trac.webkit.org/changeset/185284
>
WebKit Commit Bot
Comment 6
2015-06-06 01:39:47 PDT
Re-opened since this is blocked by
bug 145723
Darin Adler
Comment 7
2015-06-06 09:58:20 PDT
Comment on
attachment 254398
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=254398&action=review
>> Source/WebCore/rendering/RenderLayerCompositor.cpp:2476 >> + static uint64_t memSize = ramSize() / 1024 / 1024; > > Please call this ramSizeInMB.
If we are going to precompute and cache something, I suggest caching the boolean that indicates whether we should do the special policy. Not as good to instead cache a 64-bit number and keep comparing it against 512 over and over again.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug