[iOS] Don't force compositing layers for no-op 3D transforms on low-memory devices. <https://webkit.org/b/145719> <rdar://problem/19973042>

Reviewed by Geoffrey Garen.

We put elements with 3D identity transforms onto compositing layers because
we anticipate that they will somehow animate in the future.

This can get extremely expensive, especially on low-memory devices.
This patch makes WebKit stop handing out compositing layers for this kinda thing:

    -webkit-transform: translate3d(0,0,0)

..on devices with 512MB or less. This dramatically improves stability on some
web pages.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::requiresCompositingForTransform):

Canonical link: https://commits.webkit.org/163763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185284 268f45cc-cd09-0410-ab3c-d52691b4dbfc